fix(plugins/plugin-bash-like): pty output with line wrapping has vertical gaps
Fixes #2681

--- a/plugins/plugin-bash-like/web/css/xterm.css
+++ b/plugins/plugin-bash-like/web/css/xterm.css
@@ -217,6 +217,9 @@ tab.xterm-alt-buffer-mode .xterm-container .xterm-rows.xterm-focus .xterm-cursor
   /* see https://github.com/IBM/kui/issues/1605 */
   display: block;
   content: "";
+
+  /* see https://github.com/IBM/kui/issues/2681 */
+  height: 0;
 }
 
 /* in case we change our minds and want to hide it */
